feat: update project docs and code